<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:scrollbars="none">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_home"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/slider"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                app:iss_auto_cycle="true"
                app:iss_delay="0"
                app:iss_period="1500" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/abstract_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view_home"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="cursive"
            android:text="@string/about_the_app"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/abstract_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/abstract_heading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/abstract_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tech_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/abstract_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="cursive"
            android:text="@string/resources_used"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/tech_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tech_heading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/tech_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>